babl: make conversion to model double more generic

Iterate over the components of the model, and fetch the relevant
component from the source format or use a filler value if not found.

Some changes by Debarshi Ray.

https://bugzilla.gnome.org/show_bug.cgi?id=790860